updated and added css files

--- a/about-me.html
+++ b/about-me.html
@@ -239,17 +239,19 @@
 
     <footer>
 
-        <div class="footer">
-            <ul style="list-style-type: none;">
-                <li><a href="https://www.facebook.com/julierose.oyong/">&lt;Facebook&gt;</a></li>
-                <li><a href="mailto:julieroseoyong@student.laverdad.edu.ph">&lt;School Email&gt;</a></li>
-                <li><a href="mailto:oyong.julie@gmail.com">&lt;Work Email&gt;</a></li>
-                <li><a href="https://gitlab.com/julieroseoyong">&lt;Gitlab&gt;</a></li>
-                <li><a href="https://github.com/Jliee?tab=repositories">&lt;Github&gt;</a></li>
-            </ul>
-          </div>
-    
-    </footer>
+      <div class="footer">
+              <p> MY SOCIAL MEDIA </p>
+              <div class="a-container">
+                <a href="https://www.facebook.com/julierose.oyong/">&lt; <i class="fa-brands fa-square-facebook"></i> &gt;</a>
+                <a href="mailto:oyong.julie@gmail.com">&lt; <i class="fa-solid fa-envelope"></i> &gt;</a>
+                <a href="https://gitlab.com/julieroseoyong">&lt; <i class="fa-brands fa-gitlab"></i> &gt;</a>
+                <a href="https://github.com/Jliee?tab=repositories">&lt; <i class="fa-brands fa-github"></i> &gt;</a>
+              </div>
+              <br>
+              <p>© Julie Rose 2023</p>
+        </div>
+  
+  </footer>
     
 </body>
 </html>
