--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/5fb54b3625.js" crossorigin="anonymous"></script>
 
 <link rel="stylesheet" href="main.css">
 <link rel="stylesheet" href="indx.css">
@@ -51,13 +52,15 @@
 <footer>
 
     <div class="footer">
-        <ul style="list-style-type: none;">
-            <li><a href="https://www.facebook.com/julierose.oyong/">&lt;Facebook&gt;</a></li>
-            <li><a href="mailto:julieroseoyong@student.laverdad.edu.ph">&lt;School Email&gt;</a></li>
-            <li><a href="mailto:oyong.julie@gmail.com">&lt;Work Email&gt;</a></li>
-            <li><a href="https://gitlab.com/julieroseoyong">&lt;Gitlab&gt;</a></li>
-            <li><a href="https://github.com/Jliee?tab=repositories">&lt;Github&gt;</a></li>
-        </ul>
+            <p> MY SOCIAL MEDIA </p>
+            <div class="a-container">
+              <a href="https://www.facebook.com/julierose.oyong/">&lt; <i class="fa-brands fa-square-facebook"></i> &gt;</a>
+              <a href="mailto:oyong.julie@gmail.com">&lt; <i class="fa-solid fa-envelope"></i> &gt;</a>
+              <a href="https://gitlab.com/julieroseoyong">&lt; <i class="fa-brands fa-gitlab"></i> &gt;</a>
+              <a href="https://github.com/Jliee?tab=repositories">&lt; <i class="fa-brands fa-github"></i> &gt;</a>
+            </div>
+            <br>
+            <p>© Julie Rose 2023</p>
       </div>
 
 </footer>
